[project]
name = "uncloud"
version = "0.1.0"
description = "Local backups of your cloudy data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uncloud = "uncloud.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uncloud"]


[pytest]
testpaths = ["tests"]